[gd_scene load_steps=9 format=3 uid="uid://dqthql80cjsxs"]

[ext_resource type="Script" path="res://WildJam_64/ASSETS/Characters/QueefsPlayerCharacter/PlayeScriptr.gd" id="1_tuyju"]
[ext_resource type="Shader" path="res://WildJam_64/LEVELS/CRT Shader/CRT.gdshader" id="2_slnx0"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_34wnd"]
albedo_color = Color(0.219608, 1, 1, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_i54pw"]
material = SubResource("StandardMaterial3D_34wnd")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_bj0j4"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kj6rk"]
shader = ExtResource("2_slnx0")
shader_parameter/crt_brightness = 1.0
shader_parameter/crt_ghost = 5.0
shader_parameter/crt_grid = 0.4
shader_parameter/crt_white_noise = 0.0
shader_parameter/crt_curve = 0.05

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_w7so5"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_ed1sa"]
material = SubResource("StandardMaterial3D_w7so5")

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
script = ExtResource("1_tuyju")
PLAYERSTATS = {
"Health": 80,
"HealthMax": 100,
"Mana": 100,
"Stamina": 100,
"WalkSpeed": 4
}

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_i54pw")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_bj0j4")

[node name="PlayerLight" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, -1)
light_color = Color(0.745098, 0.501961, 0, 1)
light_energy = 0.5
light_cull_mask = 4294966273
shadow_enabled = true

[node name="PlayerOrigin" type="Node3D" parent="."]

[node name="WorldCam" type="Camera3D" parent="PlayerOrigin"]
transform = Transform3D(1, 0, 0, 0, 0.642787, 0.766045, 0, -0.766045, 0.642787, 0, 6.61784, 3.6285)
cull_mask = 1047553
current = true

[node name="PlayerGUI" type="Control" parent="PlayerOrigin/WorldCam"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CRT_Shader" type="SubViewportContainer" parent="PlayerOrigin/WorldCam/PlayerGUI"]
material = SubResource("ShaderMaterial_kj6rk")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="PlayerOrigin/WorldCam/PlayerGUI/CRT_Shader"]
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="SubViewportContainer" type="SubViewportContainer" parent="PlayerOrigin/WorldCam/PlayerGUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="PlayerOrigin/WorldCam/PlayerGUI/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(40, 40)
render_target_update_mode = 4

[node name="PlayerHUDCam" type="Camera3D" parent="PlayerOrigin/WorldCam/PlayerGUI/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 0.422618, 0.906308, 0, -0.906308, 0.422618, 0, 7.21784, 1.9285)
cull_mask = 1047554

[node name="MouseCast" type="RayCast3D" parent="PlayerOrigin/WorldCam"]

[node name="AttackDirection" type="MeshInstance3D" parent="."]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0.2, 0, -0.7)
mesh = SubResource("BoxMesh_ed1sa")
